# MFM-Hard-Disk-Dumper

./: .gitignore  readme.md
hardware/: pico_mfm.dch
software/pico/: CMakeLists.txt  hello_usb.c  pwmin.pio  sm_to_buf.pio  ymodem.c  ymodem.h
software/windows_host/: CSerialPort.c  Makefile  analyze.c  board.c  corvus_mfm_decoder.c  crc_ecc.c  deltas_read.c  drive.c  drive_read.c  emu_tran_file.c  mfm_decoder.c  mfm_read.c  northstar_mfm_decoder.c  parse_cmdline.c  perq_mfm_decoder.c  pru_setup.c  tagged_mfm_decoder.c  wd_mfm_decoder.c  xebec_mfm_decoder.c
software/windows_host/inc/: CSerialPort.h  analyze.h  deltas_read.h  drive.h  emu_tran_file.h
